--- a/user-authentication/home-page.html
+++ b/user-authentication/home-page.html
@@ -25,6 +25,21 @@
         h1 {
             margin: 0 0 8px;
         }
+
+        button {
+            margin-top: 16px;
+            padding: 10px 20px;
+            background-color: #ff5f5f;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        button:hover {
+            background-color: #e65050;
+        }
     </style>
 </head>
 
@@ -32,6 +47,7 @@
     <div class="card">
         <h1>Welcome 🎉</h1>
         <p>This is your home page</p>
+        <button id="logoutBtn">Logout</button>
     </div>
 
     <!-- Firebase shared config -->
@@ -39,10 +55,25 @@
 
     <script type="module">
         import { auth } from './firebase-config.js';
-        import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
+        import { onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
 
+        // Check if user is signed in
         onAuthStateChanged(auth, (user) => {
-            if (!user) window.location.href = "user-login.html";
+            if (!user) {
+                window.location.href = "user-login.html";
+            }
+        });
+
+        // Handle logout
+        const logoutBtn = document.getElementById("logoutBtn");
+        logoutBtn.addEventListener("click", () => {
+            signOut(auth)
+                .then(() => {
+                    window.location.href = "user-login.html";
+                })
+                .catch((error) => {
+                    console.error("Error signing out:", error);
+                });
         });
     </script>
 </body>
