--- a/admin-authentication/admin-dashboard.html
+++ b/admin-authentication/admin-dashboard.html
@@ -237,8 +237,8 @@
     <aside class="sidebar">
         <h2>Erumunai Admin</h2>
         <ul class="nav">
-            <li><a href="#" data-page="dashboard" class="active">Dashboard</a></li>
-            <li><a href="#" data-page="products">Product Details</a></li>
+            <li><a href="admin-dashboard.html" data-page="dashboard" class="active">Dashboard</a></li>
+            <li><a href="dashboard-product-page.html" data-page="products">Product Details</a></li>
             <li><a href="#" data-page="orders">Order Details</a></li>
             <li><a href="#" data-page="payments">Payment Details</a></li>
             <li><a href="#" data-page="settings">Settings</a></li>
