--- a/admin-authentication/dashboard-product-page.html
+++ b/admin-authentication/dashboard-product-page.html
@@ -267,7 +267,7 @@
         <ul class="nav">
             <li><a href="admin-dashboard.html" data-page="dashboard">Dashboard</a></li>
             <li><a href="dashboard-product-page.html" data-page="products" class="active">Product Details</a></li>
-            <li><a href="#" data-page="orders">Order Details</a></li>
+            <li><a href="dashboard-order-page.html" data-page="orders">Order Details</a></li>
             <li><a href="#" data-page="payments">Payment Details</a></li>
             <li><a href="#" data-page="settings">Settings</a></li>
         </ul>
@@ -309,7 +309,7 @@
             <form id="productForm">
                 <input type="hidden" id="productId" />
                 <label>Upload Product Image</label>
-                <input type="file" id="productImageFile" accept="image/*" required />
+                <input type="file" id="productImageFile" accept="image/*"  />
                 <label>Name</label>
                 <input type="text" id="productName" required />
                 <label>Price (₹)</label>
