--- a/admin-authentication/dashboard-order-page.html
+++ b/admin-authentication/dashboard-order-page.html
@@ -165,8 +165,7 @@
       <li><a href="admin-dashboard.html" data-page="dashboard">Dashboard</a></li>
       <li><a href="dashboard-product-page.html" data-page="products">Product Details</a></li>
       <li><a href="dashboard-order-page.html" data-page="orders" class="active">Order Details</a></li>
-      <li><a href="#" data-page="payments">Payment Details</a></li>
-      <li><a href="#" data-page="settings">Settings</a></li>
+      <li><a href="daashboard-setting.html" data-page="settings">Settings</a></li>
     </ul>
   </aside>
 
