--- a/user-authentication/about.html
+++ b/user-authentication/about.html
@@ -266,17 +266,24 @@ footer { background: green; color: white; padding: 30px 20px; }
   <section class="story-mission">
     <div class="story">
       <h2>Our Story</h2>
-      <p>Founded with a vision to revive the authentic flavors of Tamil Nadu, Ermunai Organic Farm Foods began as a small family initiative to preserve traditional recipes and promote organic farming practices.</p>
-      <p>Our journey started in the fertile lands of Tamil Nadu, where we partnered with local farmers to grow the finest organic ingredients. From millets and herbs to spices and vegetables, every ingredient is carefully selected and processed to maintain its natural goodness.</p>
-      <p>Today, we take pride in offering a wide range of ready-to-cook and ready-to-eat products that bring the taste of home-cooked meals to your table, no matter where you are.</p>
-    </div>
+  <p>
+    At Ermunai Organic Farm Foods, our journey began with a passion for preserving the rich culinary heritage of South India. 
+    We focus on **Traditional Native Seeds**, millets, and age-old grains to create products that are both authentic and convenient. 
+    From **Ready-to-Cook and Ready-to-Eat meals** to **Millet-based Instant Premixes** for breakfast and dinner, our offerings make it easy to enjoy wholesome, traditional meals in modern lifestyles.
+  </p>
+  <p>
+    Our aim is to provide food that nourishes not only the body but also the culture and traditions behind every grain. 
+    Every product reflects our commitment to taste, quality, and sustainability, allowing you to experience the richness of heritage foods at your table.
+  </p>    </div>
 
     <div class="mission-vision">
-      <h3>Our Mission</h3>
-      <p>To make healthy, organic, and traditional South Indian food accessible to everyone while supporting sustainable farming practices and local communities.</p>
-      <h3>Our Vision</h3>
-      <p>To become the leading brand for authentic organic South Indian food products, preserving culinary heritage while promoting wellness and sustainability.</p>
-    </div>
+  <h3>Our Mission</h3>
+  <p>To provide authentic Traditional Native Seeds-based food products that are ready-to-cook, ready-to-eat, and millet-based instant premixes for breakfast and dinner, while preserving culinary heritage and supporting sustainable farming practices.</p>
+  
+  <h3>Our Vision</h3>
+  <p>To be recognized as the leading brand for traditional and nutritious South Indian meals, offering convenient, wholesome products derived from native seeds and millets, and promoting wellness through heritage foods.</p>
+</div>
+
   </section>
 
   <!-- Our Values -->
