--- a/admin-authentication/admin-dashboard.html
+++ b/admin-authentication/admin-dashboard.html
@@ -241,8 +241,7 @@
             <li><a href="admin-dashboard.html" data-page="dashboard" class="active">Dashboard</a></li>
             <li><a href="dashboard-product-page.html" data-page="products">Product Details</a></li>
             <li><a href="dashboard-order-page.html" data-page="orders">Order Details</a></li>
-            <li><a href="#" data-page="payments">Payment Details</a></li>
-            <li><a href="#" data-page="settings">Settings</a></li>
+            <li><a href="daashboard-setting.html" data-page="settings">Settings</a></li>
         </ul>
     </aside>
 
